--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "secp256k1": "secp256k1/js"
   },
   "dependencies": {
+    "apn": "^2.2.0",
     "byteball-relay": "git+https://github.com/byteball/byteball-relay.git",
     "request": "^2.81.0"
   }
