--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "byteball-hub",
+  "name": "obyte-hub",
   "description": "Byteball Hub",
   "author": "Byteball",
   "version": "0.1.5",
